team details background strech overflow issue

--- a/wp-content/themes/multunus/sass/custom/_team.scss
+++ b/wp-content/themes/multunus/sass/custom/_team.scss
@@ -1,3 +1,9 @@
+.overflow-fix {
+  // team detail: grey background stretches to full with
+  // hides horizontal scrollbars
+  overflow-x: hidden;
+}
+
 .team-images {
   margin-top: 10px;
   margin-bottom: 65px;
